# pdf-to-html-and-markdown

./: .gitignore  README.md  converter.py  pyproject.toml  requirements.txt
docs/: FEATURES.md
src/pdf_converter/: __init__.py  cli.py  converter.py  io.py  models.py  text_utils.py  validation.py
src/pdf_converter/extraction/: __init__.py  classifier.py  columns.py  layout_structure.py  links.py  marker.py  native.py  ocr.py  page_cleanup.py  page_layout.py  pipeline.py  styling.py  tables.py  toc.py  underline.py  word_enrich.py
src/pdf_converter/rendering/: __init__.py  document.py  html.py  markdown.py  rich_text.py
tests/: test_html_escape.py  test_integration.py  test_layout_structure.py  test_page_layout.py  test_rich_text.py  test_tables.py  test_text_utils.py  test_toc.py  test_underline.py  test_validation.py
