[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-markdown"
version = "1.0.0"
description = "Production-grade PDF to Markdown and HTML converter for book-style PDFs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pdfplumber>=0.11.0",
    "pypdf>=4.0.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
marker = ["marker-pdf>=1.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
pdf-convert = "pdf_converter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
